# doj-legal-researcher-agent

./: .gitignore  CHANGELOG.md  Dockerfile.backend  Dockerfile.frontend  LICENSE  PROJECT_PLAN.md  README.md  README_project.md  basic_usage.py  docker-compose.yml  main.py  netlify.toml  plan.md  prompt.md  pyproject.toml  setup.py  streamlit_agent.py  test_langfuse_integration.py
.cursor/: mcp.json
app/: main.py  streamlit_agent.py
backend/: main.py
backend/docs_site/: Dockerfile  README.md  package-lock.json  package.json  vite.config.js
backend/docs_site/src/: App.css  App.jsx
debug/: debug_article_content.py  debug_url_content.py
docs_site/: README.md
docs_site/src/: App.css  App.jsx
doj_research_agent/: README_LANGFUSE.md  __init__.py  analyzer.py  categorizer.py  cli.py  constants.py  demo_guide.md  evaluate.py  evaluation_types.py  llm.py  llm_models.py  meta_orchestrator.py  models.py  multi_agent_orchestrator.py  orchestrator.py  scraper.py  simple_multi_agent_demo.py  utils.py
doj_research_agent/agents/: __init__.py  base_agent.py  demo_meta_agent.py  demo_multi_agent.py  evaluation_agent.py  legal_intelligence_agent.py  meta_agent.py  research_agent.py
doj_research_agent/analysis/: __init__.py  analyzer.py  categorizer.py
doj_research_agent/core/: __init__.py  constants.py  feedback_improver.py  feedback_manager.py  models.py  multi_agent_models.py
doj_research_agent/evaluation/: __init__.py  evaluate.py  langfuse_integration.py
doj_research_agent/llm/: __init__.py  llm.py
doj_research_agent/scraping/: __init__.py  scraper.py
doj_research_clean/: .gitignore  README.md  multi_agent_demo.py  requirements.txt
frontend/: streamlit_agent.py
frontend/react-dashboard/: README.md  package-lock.json  package.json
frontend/react-dashboard/public/: index.html
frontend/react-dashboard/src/: App.js  index.css
frontend/react-dashboard/src/components/: AnalysisForm.js  CasesTable.js  ChargesChart.js  FeedbackStats.js  FeedbackWidget.js  Header.js  ProgressIndicator.js  StatsCards.js
frontend/react-dashboard/src/utils/: api.js
images/: arch.excalidraw
test/: clean_analysis_fraud.py  test_feedback_improvement.py  test_feedback_system.py  test_fraud_detection.py  test_gpt4o_consistency.py  test_gpt4o_fraud.py  test_gpt4o_scraper_merge.py  test_langfuse_debug.py  test_simple_evaluation.py  test_specific_case.py  test_video_filtering.py  test_with_extracted_content.py
test/unit/: test_analyzer.py  test_orchestrator.py
