[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "doj-research-agent"
version = "0.1.0"
description = "A Python research agent for analyzing DOJ press releases on indictments and convictions"
authors = [
    {name = "Libin Guo", email = "your.email@example.com"},
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
keywords = ["doj", "legal", "research", "scraping", "analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Legal Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.0",
    "pandas>=1.5.0",
    "lxml>=4.9.0",
    "click>=8.0.0",
    "python-dateutil>=2.8.0",
    "tqdm>=4.64.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
    "pre-commit>=2.20.0",
]
nlp = [
    "spacy>=3.4.0",
    "nltk>=3.8.0",
    "textblob>=0.17.0",
]
database = [
    "sqlalchemy>=2.0.0",
    "sqlite3",
    "psycopg2-binary>=2.9.0",
]
jupyter = [
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
]
all = [
    "doj-research-agent[dev,nlp,database,jupyter]",
]

[project.urls]
Homepage = "https://github.com/Alicelibinguo5/doj-case-research-agent"
Repository = "https://github.com/Alicelibinguo5/doj-case-research-agent"
Issues = "https://github.com/Alicelibinguo5/doj-case-research-agent/issues"
Documentation = "https://github.com/Alicelibinguo5/doj-case-research-agent#readme"

[project.scripts]
doj-agent = "doj_research_agent.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["doj_research_agent"]

[tool.hatch.version]
path = "doj_research_agent/__init__.py"

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["doj_research_agent"]
skip_gitignore = true

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "bs4.*",
    "lxml.*",
    "requests.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=src/doj_research_agent",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--cov-fail-under=80",
    "-v",
]

[tool.coverage.run]
source = ["src/doj_research_agent"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]