[tool.poetry]
package-mode = false
name = "doj-research-agent"
version = "0.1.0"
description = "Agent that analyzes DOJ press releases for legal research"
authors = ["Libin Guo<libinguo89@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
beautifulsoup4 = "*"
openai = "^1.10.0"
pandas = ">=1.5.0"
lxml = ">=4.9.0"
click = ">=8.0.0"
python-dateutil = ">=2.8.0"
tqdm = ">=4.64.0"
pydantic = ">=2.0.0"
rich = ">=13.0.0"
streamlit = "*"
watchdog = "*"
fastapi = "*"
uvicorn = "*"
redis = "^5.0.0"
langchain = ">=0.1.0"
langchain-openai = ">=0.1.0"
langchain-anthropic = ">=0.1.0"
langchain-community = "*"
instructor = ">=1.0.0"
ragas = ">=0.1.0"
datasets = ">=2.14.0"
scikit-learn = ">=1.3.0"
langgraph = "*"
langfuse = "^2.0.0"
python-dotenv = "^1.0.0"

[poetry.group.dev.dependencies]
pytest = "^7.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["doj_research_agent"]
skip_gitignore = true

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "bs4.*",
    "lxml.*",
    "requests.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=doj_research_agent",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--cov-fail-under=80",
    "-v",
]